--- a/_posts/2024-04-20-Faultline-100km.markdown
+++ b/_posts/2024-04-20-Faultline-100km.markdown
@@ -19,4 +19,105 @@ banner:
 
 
 I had been looking forward to this event for a while - the abundance of trails around
-Wellington make it a great place to do long rides linking together suburbs.
+Wellington make it a great place to do long rides linking together suburbs, but the
+complexity of linking them together for a race through the city took some organisation.
+
+For this, the first running of the Faultine, there were a few distance options.
+I chose to race the 100km distance, rather than the longer 160km race partly because
+I don't think I have a 160km race in me, but also partly because the start time for
+the longer distance was painfully early! As it happened the start of the 100km race was
+within easy riding distance from home which also helped.
+
+For our race we started around 6am in Belmont. This was before sunrise at this time
+of year so everyone had their lights on as we gathered in the school car park for the start.
+The usual nervous pre-race toilet habits were exacerbated by the early start
+and made more amusing by having to provide the light in the portaloos ourselves.
+
+We all lined up on an ad-hoc startline and it looked like most people were there for a fun time
+rather than a race, so the stratline atmosphere was quite relaxed. We kicked off with a road 
+climb for a short distance which meant that we could shuffle around easily before the first 
+singletrack climb in Belmont Regional Park. I wanted to lead up the first climb and get a good gap
+so that I could get into the first descent without having a light following me closely and making shadows.
+Because of that I started fairly hard and got a small gap up the first climb. I tried to settle
+in and not go too hard up the single track, and then was able to just enjoyed myself on the descent.
+
+![Startline](../../../../assets/images/posts/faultline_2024/startline.png)
+
+On the next long climb up 4-degrees I deliberately chilled out, trying to keep my heart rate below 
+160bpm, and hoping that I would get some company: 100km out on my own didn't sound like much
+fun. Thankfully Ross Weston caught me up at the top of the climb and we rode together over the top
+of Belmont through the rolling farmland. The spiky climbs in Belmont are always a challenge and
+I definitely didn't clean every ascent.
+
+Ross and I stayed together down through Cannons Creek and into the first feed zone in Porirua.
+I was working on a single-feed plan and had started with three bottles on my bike. Ross did have to
+stop and so we split up at the feed. I again tried to ride consistently up the climb of 
+Rangituhi/Colonial Knob, and about half way up Ross had me back in sight and he caught me before
+the top.
+
+The descent from the top is a fun one and starts fast on open grassland before hopping over a fence
+and into the Spicer Forest singletrack. This descent isn't technical, but does provide a nice 
+opportunity to recover and switch off a bit. After this we popped out into Ohariu Valley and a
+rolling tarseal valley road. My focus on the road was getting through as much of the rest of my
+bottles as I could, getting a bar down me and stripping off some excess clothing. Ross sat on
+the front and pulled while I faffed with admin the whole way along the road.
+
+We then had the enjoyable doubletrack climb up to the saddle that separates Johnsonville from 
+Ohariu Valley. I was expecting Emily to be at this point to swap bottles, get rid of my light
+and grab my hydration vest. To give myself a bit of a buffer for that feed I decided to push on 
+a bit more on the climb and pulled away from Ross a bit. I was glad to see Emily at the top and
+she did a great job of helping me get rid of my light and don my vest. Getting a mid-way kiss
+was definitely a highlight of the day!
+
+![Kiss at the feed](../../../../assets/images/posts/faultline_2024/kiss.png)
+
+While I was feeding Ross passed me and got a nice gap. I wasn't particularly worried, and set
+about riding at a consistent pace again up the rest of the climb to the top of Mt Kaukau. I caught
+Ross up somewhere on the climb to Kaukau, but Ross kept opening gaps through some of the new
+singletrack that I didn't know so well.
+
+From Kaukau we followed the Skyline trail along to Makara Peak. Somewhere along the Skyline Ross
+dropped off. I don't think I kicked on at all, but we had been going fairly consistently for about
+three hours at this point. Once I realised that Ross was gone I deliberately decided to try to
+not get carried away and just keep it consistent. Part of the point of this race for me was to
+just get a good long aerobic ride in, so I didn't feel the need to put in any attacks.
+
+![Getting going again](../../../../assets/images/posts/faultline_2024/depart.png)
+
+We did two laps of Makara Peak, and I almost got lost part way down the first descent with some 
+confusing signage. I was grateful that the GPS track that the organisers had shared was correct
+through here and I relied on that to make sure I had gone the right way. On the second descent
+of Makara Peak my arms were getting a bit tired and I had to take the descent fairly gently.
+
+From here on, I was on my own. We went up Salvation to the top of Wrights Hill, then around the back
+of the Zealandia fenceline and in to Barking Emu, Carparts Extension and Carparts: these are some of my
+favourite tracks close to town. We then had the long run down Ikigai to Aro Valley, where again my arms were 
+fatiguing and I played it safe on the descent. 
+
+From Aro Valley we started the city section of the course, which involved more sharp climbs,
+road crossings (with surprised traffic marshals - I think I was a bit earlier than expected)
+and steps. I knew that there would be quite a bit of pushing through this section with all the
+steps and had deliberately saved energy for the final 25km. Nevertheless, this section still
+hurt and I was swearing away at the organisers at times when we could see good trails just to
+the side of the steps that they had decided to send us up.
+
+After meandering around Berhampore and Mt Albert we eventually made it onto Mt Victoria for
+the final trails before the finish. The northern kilmotre or so of the Mt. Vic. section 
+seemed to drag on for ages as we could see the waterfront beneath us and I wondered when we 
+would finally drop down to the finishing section. Finally we did drop down, cross over the road 
+and onto the waterfront. 
+
+Probably unsurprisingly given the nice weather, the waterfront was
+quite busy and I don't think people appreciated a cyclist smashing along the cycle path at 35kph.
+I don't think I pissed anyone off too much and rolled over the finish for first place. The
+organisers hadn't finished putting up the finish gantry, and the finish was pretty underwhelming.
+Thankfully Emily was there for a finish line photo and cuddle.
+
+![After the finish was completed](https://dgtzuqphqg23d.cloudfront.net/ReID8WxuAZ4bVgog_ZjnrnvlWmpgY5UIVMQW3926ccU-1536x2048.jpg)
+
+This ended up being a pretty successful start for the Seismic Cycle Racing kit! Ross wasn't far behind
+having only lost about five minutes to me over the second 50km, so the win wasn't particularly 
+comfortable, but it was nice to start off with a win.
+
+
+<div class="strava-embed-placeholder" data-embed-type="activity" data-embed-id="11220064283" data-style="standard"></div><script src="https://strava-embeds.com/embed.js"></script>
